Converted URLs to use `url_for(...)` so they work on the url path.

--- a/plainoldrecipe/templates/index.html
+++ b/plainoldrecipe/templates/index.html
@@ -4,7 +4,7 @@
     <p>Take a recipe website URL and remove the cruft.</p>
 
     <div class="recipe-input">
-        <form method="GET" action="/recipe">
+        <form method="GET" action="{{ url_for('recipe') }}">
             <input type="text" name="url" autofocus />
             <button type="submit">
                 Simplify...
