--- a/plainoldrecipe/templates/nav.html
+++ b/plainoldrecipe/templates/nav.html
@@ -1,6 +1,6 @@
     <nav class="nav">
-    <a href="/">Home</a> |
-    <a href="/supported-websites">Supported Websites</a> |
+    <a href="{{ url_for('index') }}">Home</a> |
+    <a href="{{ url_for('supported_websites') }}">Supported Websites</a> |
     <a href="javascript:void(window.open('https://plainoldrecipe.com/recipe?url='+location.href.replace(/%5C/$/,%20'')));">Bookmarklet</a> |
     <a href="https://github.com/BreD1810/plainoldrecipe">GitHub</a>
     </nav>
